--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 <head>
-  <base href="/android_asset/www/" />
   <meta charset="UTF-8">
   <title>Ionic App</title>
   <meta name="viewport" content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
@@ -29,7 +28,7 @@
     }
   </script>-->
 
-  <link href="build/main.css" rel="stylesheet">
+  <!--<link href="build/main.css" rel="stylesheet">-->
 
 </head>
 <body>
@@ -38,14 +37,14 @@
   <ion-app></ion-app>
 
   <!-- The polyfills js is generated during the build process -->
-  <script src="build/polyfills.js"></script>
+  <!--<script src="build/polyfills.js"></script>-->
 
   <!-- The vendor js is generated during the build process
        It contains all of the dependencies in node_modules -->
-  <script src="build/vendor.js"></script>
+  <!--<script src="build/vendor.js"></script>-->
 
   <!-- The main bundle js is generated during the build process -->
-  <script src="build/main.js"></script>
+  <!--<script src="build/main.js"></script>-->
 
 </body>
 </html>
