--- a/src/pages/leaderboard/leaderboard.html
+++ b/src/pages/leaderboard/leaderboard.html
@@ -38,8 +38,8 @@
     </ion-grid>
 </ion-content>
 <!-- Fab Button -->
-<!--<ion-fab #fab bottom right>-->
-    <!--<button button-ion-fab ion-fab>-->
-        <!--<ion-icon name="calendar"></ion-icon>-->
-    <!--</button>-->
-<!--</ion-fab>-->
+<ion-fab #fab bottom right>
+    <button button-ion-fab ion-fab style="margin-bottom: 250px" (click)="probando()">
+        <ion-icon name="calendar"></ion-icon>
+    </button>
+</ion-fab>
