--- a/src/pages/leaderboard/leaderboard.html
+++ b/src/pages/leaderboard/leaderboard.html
@@ -1,32 +1,43 @@
 <!--Fist Screen-->
 <ion-header>
     <ion-navbar>
-        <button ion-button menuToggle>
-            <ion-icon class="icon-menu" name="menu"></ion-icon>
-        </button>
         <!---Title-->
         <ion-title>2Step Reviews</ion-title>
     </ion-navbar>
 </ion-header>
 <!--Theme Appearance animation (Zoom In)-->
 <ion-content>
-    <h3 style="text-align: center">Leaderboard</h3>
+    <br>
+    <ion-col col-12 padding-top>
+        <span font-bold span-medium padding-left>Leaderboard</span>
+    </ion-col>
     <ion-grid no-padding >
-        <ion-row>
-            <ion-col col-12>
-                <ion-list no-margin>
-                    <ion-item no-lines [ngClass]="{ 'zoom-in': true }"  *ngFor="let item of animateItems; let i = index;"  >
-                        <ion-avatar item-start>
-                            <ngx-avatar name="{{ item.user }}"></ngx-avatar>
-                        </ion-avatar>
-                        <h2 item-title >{{item.user}}</h2>
-                        <h2 item-subtitle >Invites Sent {{ item.invites }}</h2>
-                        <h2 item-subtitle >Review {{ item.reviews }}</h2>
-                        <h2 item-subtitle >Success Rate {{ item.success_rate }}</h2>
-                    </ion-item>
-                </ion-list>
-            </ion-col>
-        </ion-row>
+        <ion-col col-12 padding-top *ngIf="!animateItems?.length">
+            <span font-bold span-small="" padding-left>No results found</span>
+        </ion-col>
+
+        <ion-col col-12>
+            <ion-list>
+                <ion-item box-shadow margin-top no-lines *ngFor="let item of animateItems; let i = index;" [ngClass]="{ 'zoom-in': true }">
+                    <!-- Avatar -->
+                    <ion-avatar item-start>
+                        <!--<img [src]="item.image">-->
+                        <ngx-avatar name="{{ item.user }}"></ngx-avatar>
+                    </ion-avatar>
+                    <!-- Title -->
+                    <h2 item-title>{{ item.user }}</h2>
+                    <h3 text-wrap margin-top>
+                        Invites Sent {{ item.invites }}
+                    </h3>
+                    <h3 text-wrap >
+                        Success Rate {{ item.success_rate }}
+                    </h3>
+                    <h3 text-wrap >
+                        Review {{ item.reviews }}
+                    </h3>
+                </ion-item>
+            </ion-list>
+        </ion-col>
     </ion-grid>
 </ion-content>
 <!-- Fab Button -->
