--- a/src/pages/tab/tab.html
+++ b/src/pages/tab/tab.html
@@ -1,6 +1,6 @@
 <ion-tabs [selectedIndex]=mySelectedIndex #myTabs>
     <ion-tab [root]="homeRoot" tabTitle="Invite" tabUrlPath="0" tabIcon="paper-plane"></ion-tab>
     <ion-tab [root]="leaderboardRoot" tabTitle="Leaderboard" tabUrlPath="1" tabIcon="people"></ion-tab>
-    <!--<ion-tab [root]="reviewsRoot" tabTitle="Review" tabUrlPath="2" tabIcon="chatboxes"></ion-tab>-->
+    <ion-tab [root]="reviewsRoot" tabTitle="Review" tabUrlPath="2" tabIcon="chatboxes"></ion-tab>
     <ion-tab [root]="profileRoot" tabTitle="Profile" tabUrlPath="3" tabIcon="contact"></ion-tab>
 </ion-tabs>
