--- a/www/index.html
+++ b/www/index.html
@@ -21,6 +21,7 @@
   <!-- cordova.js required for cordova apps (remove if not needed) -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons"  rel="stylesheet">
   <script src="cordova.js"></script>
+  <script src="https://js.pusher.com/4.1/pusher.min.js"></script>
 
   <!-- un-comment this code to enable service worker
   <script>
