--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -27,7 +27,7 @@
         </ion-card-content>
 
         <br>
-        <button ion-button full (click)="logout()" color="danger">Logout</button>
+        <button ion-button full (click)="logout()" style="background-color: #4FF6C6">Logout</button>
       </ion-card>
 
     </ion-col>
