--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -1,5 +1,5 @@
 <!-- Themes Login + logo -->
-<ion-content background-size default-background [ngStyle]="{'background-image': 'url(assets/images/background/auth-bg.jpg)'}">
+<ion-content background-size default-background style="background-color: #252531">
     <ion-grid>
         <ion-row wrap padding>
             <ion-col >
@@ -13,7 +13,7 @@
                     <br>
                     <br>
                     <div align="center">
-                        <img padding-bottom src="assets/images/logo/logo-icon.png">
+                        <img padding-bottom src="assets/images/logo/logo-icon-blank.png">
                     </div>
                     <br>
                     <!---Input field username-->
