--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -24,6 +24,9 @@
                 <br>
                 <br>
                 <br>
+                <div align="center">
+                    <img padding-bottom src="assets/images/logo-icon-blank.png" style="width:70px; height: 70px">
+                </div>
                 <form  [formGroup]="form" (submit)="onSubmit(form.value)">
                     <!---Input field username-->
                     <ion-item no-lines box-shadow>
