--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -11,9 +11,8 @@
                     <br>
                     <br>
                     <br>
-                    <br>
                     <div align="center">
-                        <img padding-bottom src="assets/images/logo/logo-icon-blank.png">
+                        <img padding-bottom src="assets/images/logo-light-text.png" style="width:200px; height: 70px">
                     </div>
                     <br>
                     <!---Input field username-->
