se jodio to eso

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -41,7 +41,7 @@
                         <ion-label class="lm-label">
                             <ion-icon name="call"></ion-icon>
                         </ion-label>
-                        <ion-input type="tel" mask="(000) 000-0000" no-margin type="text" placeholder="Phone Number" formControlName="to"></ion-input>
+                        <ion-input lmMask type="tel" no-margin type="text" placeholder="To" formControlName="to"></ion-input>
                     </ion-item>
                     <!---Input field password-->
                     <br>
