--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -33,3 +33,9 @@
     </ion-col>
   </ion-grid>
 </ion-content>
+<!-- Fab Button -->
+<ion-fab #fab bottom right>
+  <button button-ion-fab ion-fab style="position : absolute; bottom: 70px; right : 20px;" (click)="presentConfigModal()">
+    <ion-icon name="cog"></ion-icon>
+  </button>
+</ion-fab>
